# Unveni

./: .gitignore  README.md  package-lock.json  package.json  render.yaml
apps/web/: .dev.vars.example  .env.example  index.html  package.json  tsconfig.app.json  vite.config.ts  wrangler.toml
apps/web/functions/: _data.ts  _middleware.ts  _utils.ts
apps/web/functions/api/: market-overview.ts  opportunities.ts  risk.ts  session.ts  signals.ts  watchlist.ts
apps/web/public/charting_library/: README.md
apps/web/public/datafeeds/: README.md
apps/web/src/: App.tsx  styles.css  tradingview.d.ts  vite-env.d.ts
apps/web/src/components/: Header.tsx  (+14 more)
docs/: architecture.md  tradingview-advanced-charts.md
services/api/: .env.example  pyproject.toml
services/api/app/: __init__.py  config.py  db.py  errors.py  main.py  migrations.py  models.py  sample_data.py
services/api/app/providers/: __init__.py  market_data.py
services/api/app/repositories/: __init__.py  audit.py  paper_trading.py  session.py  signal_tracking.py  watchlist.py
services/api/app/routes/: explanations.py  health.py  market.py  opportunities.py  paper_trading.py  risk.py  session.py  signals.py  watchlist.py
services/api/app/services/: __init__.py  explanations.py  intraday_features.py  market.py  opportunities.py  paper_trading.py  session.py  signal_tracking.py  signals.py  watchlist.py
services/api/tests/: test_api.py
services/pipeline/: .env.example  pyproject.toml
services/pipeline/pipeline/: __init__.py  __main__.py  backtest.py  cli.py  config.py  features.py  ingest.py  train.py
(+36 files in other folders)
