[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unveni-api"
version = "0.1.0"
description = "Render-ready FastAPI service for the Unveni options assistant."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "httpx>=0.27,<1.0",
  "psycopg[binary]>=3.2,<4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
